# janslispkernel

./: README.md  pyproject.toml
example/: example.ipynb
janslispkernel/: kernel.json
src/janslispkernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
